Added hardcoded special style for value and variables.

--- a/themes/dude.html
+++ b/themes/dude.html
@@ -103,6 +103,17 @@
     .cg-variable > text, .cg-value > text {
         fill: #333;
     }
+    .cg-variable .cg-points text, .cg-value .cg-points text {
+        fill: transparent;
+    }
+    .cg-variable .cg-input circle, .cg-variable .cg-output circle,
+    .cg-variable .cg-input path, .cg-variable .cg-output path,
+    .cg-value .cg-input circle, .cg-value .cg-output circle,
+    .cg-value .cg-input path, .cg-value .cg-output path{
+        stroke-width: 1;
+        stroke: #333;
+        fill: #333;
+    }
 
     /**
      * Points
